# oar

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-publish.yml  ci.yml
doc/: loudspeaker_layout_channel_order.md
include/: animation.h  oar.h  oar_base.h
liboar/: README.md
liboar/include/: oar_metadata.h
liboar/src/: oar_utils.c  oar_utils.h
liboar/src/common/: carray.h  cdeque.h  chashmap.c  clog.c  clog.h  cqueue.c  cqueue.h  cvector.c  cvector.h  definitions.h  dep_wavwriter.c
liboar/src/limiter/: oar_limiter.c  oar_limiter.h
liboar/src/renderer/: audio_element_renderer.c  audio_element_renderer.h  audio_elements_renderer.c  audio_renderer_api.h  audio_renderer_base.c  audio_renderer_base.h  renderer_library_api.h  renderer_library_manager.c  renderer_library_utils.c  renderer_library_utils.h
liboar/src/renderer/downmix/: downmix.h  downmix_renderer.c  downmix_renderer.h
liboar/src/renderer/ear/: ae_rdr.h  h2m_rdr.c  matrix_render.c  matrix_render.h
liboar/src/renderer/ear/arch/arm/: matrix_render_arm.c
liboar/src/renderer/ear/arch/x86/: matrix_render_x86.c
liboar/src/renderer/obr/: obr.h
liboar/src/renderer/obr/obr_capi/: CMakeLists.txt  obr_capi.cpp  obr_capi.h
liboar/src/renderer/obr/obr_capi/obr/: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md
liboar/src/renderer/obr/obr_capi/obr/docs/: binaural_rendering.md  cli.md  obr_distance_rendering.tex  signal_flow.md
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_binaural_decoder/: BUILD  ambisonic_binaural_decoder.cc  ambisonic_binaural_decoder.h  partitioned_fft_filter.h  sample_type_conversion.cc  sh_hrir_creator.cc  sh_hrir_creator.h  wav.h  wav_reader.cc  wav_reader.h
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_binaural_decoder/binaural_filters/: BUILD  binaural_filters_1_oa_ambient_l.cc  binaural_filters_1_oa_ambient_r.cc  binaural_filters_1_oa_ambient_r.h  binaural_filters_1_oa_direct_l.h  binaural_filters_1_oa_direct_r.h  binaural_filters_1_oa_reverberant_l.cc  binaural_filters_1_oa_reverberant_r.h  binaural_filters_2_oa_ambient_r.cc  binaural_filters_2_oa_reverberant_r.cc  binaural_filters_2_oa_reverberant_r.h  binaural_filters_3_oa_ambient_l.cc  binaural_filters_3_oa_ambient_l.h  binaural_filters_3_oa_ambient_r.cc  binaural_filters_3_oa_ambient_r.h  binaural_filters_3_oa_direct_l.h  binaural_filters_3_oa_reverberant_l.cc  binaural_filters_3_oa_reverberant_l.h  binaural_filters_3_oa_reverberant_r.cc  binaural_filters_3_oa_reverberant_r.h  binaural_filters_4_oa_ambient_l.cc  binaural_filters_4_oa_ambient_r.cc  binaural_filters_4_oa_direct_l.h  binaural_filters_4_oa_direct_r.cc  binaural_filters_4_oa_reverberant_l.cc  binaural_filters_4_oa_reverberant_l.h  binaural_filters_4_oa_reverberant_r.cc  binaural_filters_4_oa_reverberant_r.h
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_binaural_decoder/tests/: BUILD  dsp_utils_test.cc  partitioned_fft_filter_test.cc  sample_type_conversion_test.cc
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_encoder/: ambisonic_encoder.cc  ambisonic_encoder.h  associated_legendre_polynomials_generator.cc
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_encoder/tests/: ambisonic_encoder_benchmark.cc  associated_legendre_polynomials_generator_test.cc
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_rotator/: ambisonic_rotator.cc  ambisonic_rotator.h
liboar/src/renderer/obr/obr_capi/obr/obr/ambisonic_rotator/tests/: BUILD  ambisonic_rotator_test.cc  spherical_angle.cc  spherical_angle.h
liboar/src/renderer/obr/obr_capi/obr/obr/audio_buffer/: audio_buffer.h  channel_view.h  simd_macros.h  simd_utils.cc
liboar/src/renderer/obr/obr_capi/obr/obr/audio_buffer/tests/: aligned_allocator_test.cc  audio_buffer_test.cc  channel_view_test.cc  simd_utils_test.cc
liboar/src/renderer/obr/obr_capi/obr/obr/cli/: obr_cli.cc  obr_cli_lib.h
liboar/src/renderer/obr/obr_capi/obr/obr/cli/tests/: BUILD
liboar/src/renderer/obr/obr_capi/obr/obr/common/: BUILD  constants.h  misc_math.h
liboar/src/renderer/obr/obr_capi/obr/obr/common/tests/: test_util_test.cc
liboar/src/renderer/obr/obr_capi/obr/obr/peak_limiter/: BUILD  peak_limiter.cc
liboar/src/renderer/obr/obr_capi/obr/obr/renderer/: audio_element_table_formatter.h  audio_element_type.h  loudspeaker_layouts.h  processing_group.h
liboar/src/renderer/obr/obr_capi/obr/obr/renderer/tests/: BUILD  audio_element_type_test.cc
liboar/src/renderer/olr/: olr.h
liboar/src/renderer/olr/object_audio_renderer/: numc.h  renderer.c  renderer.h  utils.c
liboar/src/renderer/olr/object_audio_renderer/block_processor/: block_processing_channel.h  processing_block.c
liboar/src/renderer/olr/object_audio_renderer/gain_calculator/: convex_hull.c  convex_hull.h  custom_gain_calculator.h  dbap_panner_2d.h  gain_calculator.h  vbap_panner_2d.c  vbap_region.c  vog.h
liboar/src/utility/: animated.h  animation.c
liboar/tests/examples/: CMakeLists.txt  test_object_based_rendering.c  test_scene_based_rendering.c
src/: oar.c  oar_config.h
src/common/: carray.c  cdeque.c  chashmap.h  cvalue.h  dep_wavwriter.h
src/renderer/: audio_elements_renderer.h  renderer_library_manager.h
src/renderer/downmix/: downmix.c
src/renderer/ear/: ear.c  ear.h  m2m_rdr.c
src/renderer/obr/: obr.c
src/renderer/obr/obr_capi/obr/docs/: api_reference.md  building.md  loudspeaker_layouts.md  signal_flow.dot
src/renderer/obr/obr_capi/obr/obr/ambisonic_binaural_decoder/: dsp_utils.cc  dsp_utils.h  fft_manager.cc  fft_manager.h  (+7 more)
src/renderer/olr/: olr.c
src/renderer/olr/object_audio_renderer/: layout.c  layout.h  numc.c  object_based_audio_renderer.c  object_based_audio_renderer.h  utils.h
src/renderer/olr/object_audio_renderer/block_processor/: block_processing_channel.c  interpret_object_metadata.c  interpret_object_metadata.h  processing_block.h
src/renderer/olr/object_audio_renderer/gain_calculator/: custom_gain_calculator.c  dbap_panner_2d.c  gain_calculator.c  vbap_panner_2d.h  vbap_region.h  vog.c
tests/examples/: test_audio_element_types.c  test_channel_based_rendering.c
(+63 files in other folders)
