###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "obr",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(
    name = "abseil-cpp",
    version = "20250512.1",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "protobuf",
    version = "32.0",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.9.4",
    repo_name = "com_google_benchmark",
)
bazel_dep(
    name = "eigen",
    version = "3.4.0.bcr.3",
)
